syntax = "proto3";

package company;
option go_package = "github.com/bo-er/monthly/proto/company";
import "common/common.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";

service EmployeeService {
  rpc CreateEmployee(CreateEmployeeRequest) returns (Employee) {
    option (google.api.http) = {
      post: "/v1/companies/{company_id}/departments/{department_id}/employees"
      body: "employee"
    };
  };
  // Lists employees of a department.
  rpc ListEmployees(ListEmployeesRequest) returns (ListEmployeesResponse) {
    // List method maps to HTTP GET.
    option (google.api.http) = {
      // The `parent` captures the parent resource name, such as "companies/actiontech/departments/rd".
      get: "/v1/companies/{company_id}/departments/{department_id}/employees"
      additional_bindings {
        get: "/v1/companies/{company_id}/departments/-/employees"
      }
    };
  }

  // Updates an employee.
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (Employee) {
    // Update maps to HTTP PATCH. Resource name is mapped to a URL path.
    // Resource is contained in the HTTP request body.
    option (google.api.http) = {
      // Note the URL template variable which captures the resource name of the
      // employee to update.
      patch: "/v1/companies/{company_id}/departments/{department_id}/employees"
      body: "employee"
    };
  }
}

message Employee{
  string name =1;
  string email = 2;
}

message CreateEmployeeRequest{
  common.Request request = 1;
  string company_id = 2;
  string department_id = 3;
  Employee employee = 4;
}

message ListEmployeesRequest {
  string company_id = 1;
  string department_id = 2;
  // The maximum number of items to return.
  int32 page_size = 3;

  // The next_page_token value returned from a previous List request, if any.
  // this indicates the index of next page, if it's empty then there is no next page.
  string page_token = 4;
}

message ListEmployeesResponse{
  repeated Employee employees = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}

message UpdateEmployeeRequest {
  string company_id = 1;
  string department_id = 2;
  // The employee resource which replaces the resource on the server.
  Employee employee = 3;
  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 4;
}